# rust.twitter

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  api.http  docker-compose.yaml
.github/workflows/: build.yml
migrations/2021-02-06-104402_create_tables/: up.sql
src/: constants.rs  like.rs  main.rs  tweet.rs
