[package]
name = "rust-twitter"
version = "0.1.0"
authors = ["Nic Pearson <nic.s.pearson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.0"
actix-web = "3"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
serde = "1.0.106"
serde_json = "1.0.51"
uuid = { version = "0.8", features = ["serde", "v4"] }
