[package]
name = "rust-twitter"
version = "0.1.0"
authors = ["Nic Pearson <nic.s.pearson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.0"
actix-web = "3"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
serde = "1.0.106"
serde_json = "1.0.51"
uuid = { version = "0.6", features = ["serde", "v4"] }
# Required for postgres containerization.
openssl = "*"
openssl-probe = "0.1.2"
